applications/resume/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resume-app-service
  labels:
    app: resume-app
spec:
  selector:
    app: resume-app
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
