applications/resume/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resume-app-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - italomariano.dev.br
        - www.italomariano.dev.br
      secretName: wildcard-italomariano-dev-br
  rules:
    - host: italomariano.dev.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resume-app-service
                port:
                  number: 80
    - host: www.italomariano.dev.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resume-app-service
                port:
                  number: 80
